--- a/bsp/stm32/stm32u545-st-nucleo/.config
+++ b/bsp/stm32/stm32u545-st-nucleo/.config
@@ -22,10 +22,10 @@ CONFIG_RT_HOOK_USING_FUNC_PTR=y
 # CONFIG_RT_USING_HOOKLIST is not set
 CONFIG_RT_USING_IDLE_HOOK=y
 CONFIG_RT_IDLE_HOOK_LIST_SIZE=4
-CONFIG_IDLE_THREAD_STACK_SIZE=256
+CONFIG_IDLE_THREAD_STACK_SIZE=1024
 CONFIG_RT_USING_TIMER_SOFT=y
 CONFIG_RT_TIMER_THREAD_PRIO=4
-CONFIG_RT_TIMER_THREAD_STACK_SIZE=512
+CONFIG_RT_TIMER_THREAD_STACK_SIZE=1024
 # CONFIG_RT_USING_TIMER_ALL_SOFT is not set
 # CONFIG_RT_USING_CPU_USAGE_TRACER is not set
 
@@ -85,8 +85,8 @@ CONFIG_RT_USING_DEVICE=y
 # CONFIG_RT_USING_THREADSAFE_PRINTF is not set
 # CONFIG_RT_USING_SCHED_THREAD_CTX is not set
 CONFIG_RT_USING_CONSOLE=y
-CONFIG_RT_CONSOLEBUF_SIZE=256
-CONFIG_RT_CONSOLE_DEVICE_NAME="uart1"
+CONFIG_RT_CONSOLEBUF_SIZE=512
+CONFIG_RT_CONSOLE_DEVICE_NAME="uart4"
 CONFIG_RT_VER_NUM=0x50200
 # CONFIG_RT_USING_STDC_ATOMIC is not set
 CONFIG_RT_BACKTRACE_LEVEL_MAX_NR=32
@@ -257,40 +257,7 @@ CONFIG_NUM_CONFIGURABLE_REGIONS=3
 # Utilities
 #
 # CONFIG_RT_USING_RYM is not set
-CONFIG_RT_USING_ULOG=y
-# CONFIG_ULOG_OUTPUT_LVL_EMERG is not set
-# CONFIG_ULOG_OUTPUT_LVL_ALERT is not set
-# CONFIG_ULOG_OUTPUT_LVL_CRIT is not set
-# CONFIG_ULOG_OUTPUT_LVL_ERROR is not set
-# CONFIG_ULOG_OUTPUT_LVL_WARNING is not set
-# CONFIG_ULOG_OUTPUT_LVL_NOTICE is not set
-# CONFIG_ULOG_OUTPUT_LVL_INFO is not set
-CONFIG_ULOG_OUTPUT_LVL_DEBUG=y
-CONFIG_ULOG_OUTPUT_LVL=7
-# CONFIG_ULOG_USING_ISR_LOG is not set
-CONFIG_ULOG_ASSERT_ENABLE=y
-CONFIG_ULOG_LINE_BUF_SIZE=128
-CONFIG_ULOG_USING_ASYNC_OUTPUT=y
-CONFIG_ULOG_ASYNC_OUTPUT_BUF_SIZE=2048
-CONFIG_ULOG_ASYNC_OUTPUT_BY_THREAD=y
-CONFIG_ULOG_ASYNC_OUTPUT_THREAD_STACK=1024
-CONFIG_ULOG_ASYNC_OUTPUT_THREAD_PRIORITY=30
-
-#
-# log format
-#
-# CONFIG_ULOG_OUTPUT_FLOAT is not set
-CONFIG_ULOG_OUTPUT_TIME=y
-# CONFIG_ULOG_TIME_USING_TIMESTAMP is not set
-CONFIG_ULOG_OUTPUT_LEVEL=y
-CONFIG_ULOG_OUTPUT_TAG=y
-# CONFIG_ULOG_OUTPUT_THREAD_NAME is not set
-# end of log format
-
-CONFIG_ULOG_BACKEND_USING_CONSOLE=y
-# CONFIG_ULOG_BACKEND_USING_FILE is not set
-CONFIG_ULOG_USING_FILTER=y
-CONFIG_ULOG_USING_SYSLOG=y
+# CONFIG_RT_USING_ULOG is not set
 # CONFIG_RT_USING_UTEST is not set
 # CONFIG_RT_USING_VAR_EXPORT is not set
 # CONFIG_RT_USING_RESOURCE_ID is not set
@@ -1230,13 +1197,14 @@ CONFIG_BOARD_SERIES_STM32_NUCLEO_64=y
 CONFIG_BSP_USING_GPIO=y
 CONFIG_BSP_USING_UART=y
 CONFIG_BSP_USING_UART1=y
-# CONFIG_BSP_USING_UART2 is not set
-# CONFIG_BSP_USING_LPUART1 is not set
+CONFIG_BSP_USING_UART3=y
+CONFIG_BSP_USING_UART4=y
+CONFIG_BSP_USING_UART5=y
+CONFIG_BSP_USING_LPUART1=y
 # CONFIG_BSP_USING_ADC is not set
 # CONFIG_BSP_USING_PWM is not set
 # CONFIG_BSP_USING_SPI is not set
 # CONFIG_BSP_USING_I2C is not set
-# CONFIG_BSP_USING_USBD is not set
 # CONFIG_BSP_USING_UDID is not set
 # end of On-chip Peripheral Drivers
 
