--- a/bsp/stm32/stm32u545-st-nucleo/.config
+++ b/bsp/stm32/stm32u545-st-nucleo/.config
@@ -86,7 +86,7 @@ CONFIG_RT_USING_DEVICE=y
 # CONFIG_RT_USING_SCHED_THREAD_CTX is not set
 CONFIG_RT_USING_CONSOLE=y
 CONFIG_RT_CONSOLEBUF_SIZE=512
-CONFIG_RT_CONSOLE_DEVICE_NAME="uart4"
+CONFIG_RT_CONSOLE_DEVICE_NAME="lpuart1"
 CONFIG_RT_VER_NUM=0x50200
 # CONFIG_RT_USING_STDC_ATOMIC is not set
 CONFIG_RT_BACKTRACE_LEVEL_MAX_NR=32
