--- a/bsp/stm32/stm32u545-st-nucleo/.config
+++ b/bsp/stm32/stm32u545-st-nucleo/.config
@@ -45,7 +45,7 @@ CONFIG_RT_TIMER_THREAD_STACK_SIZE=1024
 
 CONFIG_RT_USING_DEBUG=y
 CONFIG_RT_DEBUGING_ASSERT=y
-CONFIG_RT_DEBUGING_COLOR=y
+# CONFIG_RT_DEBUGING_COLOR is not set
 CONFIG_RT_DEBUGING_CONTEXT=y
 # CONFIG_RT_DEBUGING_AUTO_INIT is not set
 CONFIG_RT_USING_OVERFLOW_CHECK=y
