--- a/bsp/stm32/stm32u545-st-nucleo/.config
+++ b/bsp/stm32/stm32u545-st-nucleo/.config
@@ -145,7 +145,7 @@ CONFIG_RT_USING_SERIAL=y
 CONFIG_RT_USING_SERIAL_V1=y
 # CONFIG_RT_USING_SERIAL_V2 is not set
 # CONFIG_RT_SERIAL_USING_DMA is not set
-CONFIG_RT_SERIAL_RB_BUFSZ=64
+CONFIG_RT_SERIAL_RB_BUFSZ=1024
 # CONFIG_RT_USING_CAN is not set
 # CONFIG_RT_USING_CPUTIME is not set
 CONFIG_RT_USING_I2C=y
@@ -164,7 +164,12 @@ CONFIG_RT_USING_PWM=y
 # CONFIG_RT_USING_INPUT_CAPTURE is not set
 # CONFIG_RT_USING_MTD_NOR is not set
 # CONFIG_RT_USING_MTD_NAND is not set
-# CONFIG_RT_USING_PM is not set
+CONFIG_RT_USING_PM=y
+CONFIG_PM_TICKLESS_THRESHOLD_TIME=2
+# CONFIG_PM_USING_CUSTOM_CONFIG is not set
+CONFIG_PM_ENABLE_DEBUG=y
+# CONFIG_PM_ENABLE_SUSPEND_SLEEP_MODE is not set
+# CONFIG_PM_ENABLE_THRESHOLD_SLEEP_MODE is not set
 # CONFIG_RT_USING_RTC is not set
 # CONFIG_RT_USING_SDIO is not set
 CONFIG_RT_USING_SPI=y
@@ -176,7 +181,9 @@ CONFIG_RT_USING_SPI=y
 # CONFIG_RT_USING_SPI_WIFI is not set
 # CONFIG_RT_USING_WDT is not set
 # CONFIG_RT_USING_AUDIO is not set
-# CONFIG_RT_USING_SENSOR is not set
+CONFIG_RT_USING_SENSOR=y
+CONFIG_RT_USING_SENSOR_V2=y
+CONFIG_RT_USING_SENSOR_CMD=y
 # CONFIG_RT_USING_TOUCH is not set
 # CONFIG_RT_USING_LCD is not set
 # CONFIG_RT_USING_HWCRYPTO is not set
@@ -550,7 +557,26 @@ CONFIG_NUM_CONFIGURABLE_REGIONS=3
 #
 # CONFIG_PKG_USING_RT_MEMCPY_CM is not set
 # CONFIG_PKG_USING_RT_KPRINTF_THREADSAFE is not set
-# CONFIG_PKG_USING_RT_VSNPRINTF_FULL is not set
+CONFIG_PKG_USING_RT_VSNPRINTF_FULL=y
+CONFIG_PKG_RT_VSNPRINTF_FULL_PATH="/packages/system/enhanced-kservice/rt_vsnprintf_full"
+CONFIG_PKG_VSNPRINTF_SUPPORT_DECIMAL_SPECIFIERS=y
+CONFIG_PKG_VSNPRINTF_SUPPORT_EXPONENTIAL_SPECIFIERS=y
+CONFIG_PKG_VSNPRINTF_SUPPORT_WRITEBACK_SPECIFIER=y
+CONFIG_PKG_VSNPRINTF_SUPPORT_LONG_LONG=y
+CONFIG_PKG_VSNPRINTF_CHECK_FOR_NUL_IN_FORMAT_SPECIFIER=y
+# CONFIG_PKG_VSNPRINTF_SUPPORT_MSVC_STYLE_INTEGER_SPECIFIERS is not set
+CONFIG_PKG_VSNPRINTF_INTEGER_BUFFER_SIZE=32
+CONFIG_PKG_VSNPRINTF_DECIMAL_BUFFER_SIZE=32
+CONFIG_PKG_VSNPRINTF_DEFAULT_FLOAT_PRECISION=6
+CONFIG_PKG_VSNPRINTF_MAX_INTEGRAL_DIGITS_FOR_DECIMAL=9
+CONFIG_PKG_VSNPRINTF_LOG10_TAYLOR_TERMS=4
+# CONFIG_RT_VSNPRINTF_FULL_REPLACING_SPRINTF is not set
+# CONFIG_RT_VSNPRINTF_FULL_REPLACING_SNPRINTF is not set
+# CONFIG_RT_VSNPRINTF_FULL_REPLACING_PRINTF is not set
+# CONFIG_RT_VSNPRINTF_FULL_REPLACING_VSPRINTF is not set
+# CONFIG_RT_VSNPRINTF_FULL_REPLACING_VSNPRINTF is not set
+CONFIG_PKG_USING_RT_VSNPRINTF_FULL_LATEST_VERSION=y
+CONFIG_PKG_RT_VSNPRINTF_FULL_VER="latest"
 # end of enhanced kernel services
 
 # CONFIG_PKG_USING_AUNITY is not set
@@ -925,7 +951,23 @@ CONFIG_NUM_CONFIGURABLE_REGIONS=3
 # CONFIG_PKG_USING_KI is not set
 # CONFIG_PKG_USING_ARMv7M_DWT is not set
 # CONFIG_PKG_USING_CRCLIB is not set
-# CONFIG_PKG_USING_LWGPS is not set
+CONFIG_PKG_USING_LWGPS=y
+# CONFIG_LWGPS_USING_SAMPLES is not set
+CONFIG_PKG_LWGPS_PATH="/packages/misc/lwgps"
+CONFIG_GPS_MODULE_BAUD_RATE=115200
+CONFIG_LWGPS_CFG_DOUBLE=0
+CONFIG_LWGPS_CFG_STATUS=0
+CONFIG_LWGPS_CFG_STATEMENT_GPGGA=1
+CONFIG_LWGPS_CFG_STATEMENT_GPGSA=1
+CONFIG_LWGPS_CFG_STATEMENT_GPRMC=1
+CONFIG_LWGPS_CFG_STATEMENT_GPGSV=1
+CONFIG_LWGPS_CFG_STATEMENT_GPGSV_SAT_DET=0
+CONFIG_LWGPS_CFG_STATEMENT_PUBX=0
+CONFIG_LWGPS_CFG_STATEMENT_PUBX_TIME=0
+# CONFIG_PKG_USING_LWGPS_V100 is not set
+# CONFIG_PKG_USING_LWGPS_V110 is not set
+CONFIG_PKG_USING_LWGPS_LATEST_VERSION=y
+CONFIG_PKG_LWGPS_VER="latest"
 # CONFIG_PKG_USING_STATE_MACHINE is not set
 # CONFIG_PKG_USING_DESIGN_PATTERN is not set
 # CONFIG_PKG_USING_CONTROLLER is not set
@@ -1201,10 +1243,18 @@ CONFIG_BSP_USING_UART3=y
 CONFIG_BSP_USING_UART4=y
 CONFIG_BSP_USING_UART5=y
 CONFIG_BSP_USING_LPUART1=y
-# CONFIG_BSP_USING_ADC is not set
+CONFIG_BSP_USING_ADC=y
+CONFIG_BSP_USING_ADC1=y
 # CONFIG_BSP_USING_PWM is not set
 # CONFIG_BSP_USING_SPI is not set
-# CONFIG_BSP_USING_I2C is not set
+CONFIG_BSP_USING_I2C=y
+CONFIG_BSP_USING_I2C1=y
+
+#
+# Notice: PB8 --> 24; PB9 --> 25
+#
+CONFIG_BSP_I2C1_SCL_PIN=24
+CONFIG_BSP_I2C1_SDA_PIN=19
 # CONFIG_BSP_USING_UDID is not set
 # end of On-chip Peripheral Drivers
 
