--- a/bsp/stm32/stm32u545-st-nucleo/.config
+++ b/bsp/stm32/stm32u545-st-nucleo/.config
@@ -149,7 +149,7 @@ CONFIG_RT_SERIAL_RB_BUFSZ=1024
 # CONFIG_RT_USING_CAN is not set
 # CONFIG_RT_USING_CPUTIME is not set
 CONFIG_RT_USING_I2C=y
-# CONFIG_RT_I2C_DEBUG is not set
+CONFIG_RT_I2C_DEBUG=y
 CONFIG_RT_USING_I2C_BITOPS=y
 # CONFIG_RT_I2C_BITOPS_DEBUG is not set
 # CONFIG_RT_USING_SOFT_I2C is not set
