--- a/bsp/stm32/stm32u545-st-nucleo/.config
+++ b/bsp/stm32/stm32u545-st-nucleo/.config
@@ -170,7 +170,9 @@ CONFIG_PM_TICKLESS_THRESHOLD_TIME=2
 CONFIG_PM_ENABLE_DEBUG=y
 # CONFIG_PM_ENABLE_SUSPEND_SLEEP_MODE is not set
 # CONFIG_PM_ENABLE_THRESHOLD_SLEEP_MODE is not set
-# CONFIG_RT_USING_RTC is not set
+CONFIG_RT_USING_RTC=y
+CONFIG_RT_USING_ALARM=y
+# CONFIG_RT_USING_SOFT_RTC is not set
 # CONFIG_RT_USING_SDIO is not set
 CONFIG_RT_USING_SPI=y
 # CONFIG_RT_USING_SPI_BITOPS is not set
@@ -1255,6 +1257,9 @@ CONFIG_BSP_USING_I2C1=y
 #
 CONFIG_BSP_I2C1_SCL_PIN=24
 CONFIG_BSP_I2C1_SDA_PIN=19
+CONFIG_BSP_USING_ONCHIP_RTC=y
+CONFIG_BSP_RTC_USING_LSI=y
+# CONFIG_BSP_RTC_USING_LSE is not set
 # CONFIG_BSP_USING_UDID is not set
 # end of On-chip Peripheral Drivers
 
