--- a/bsp/stm32/stm32u545-st-nucleo/board/SConscript
+++ b/bsp/stm32/stm32u545-st-nucleo/board/SConscript
@@ -10,6 +10,7 @@ cwd = GetCurrentDir()
 src = Split('''
 board.c
 CubeMX_Config/Src/stm32u5xx_hal_msp.c
+CubeMX_Config/Src/stm32u5xx_it.c
 ''')
 
 # if GetDepend(['BSP_USING_KEY']):
