--- a/bsp/stm32/stm32u545-st-nucleo/board/Kconfig
+++ b/bsp/stm32/stm32u545-st-nucleo/board/Kconfig
@@ -195,6 +195,19 @@ menu "On-chip Peripheral Drivers"
                 endif
         endif
 
+    menuconfig BSP_USING_ONCHIP_RTC
+        bool "Enable ONCHIP RTC"
+        default y
+        select RT_USING_PIN
+        if BSP_USING_ONCHIP_RTC
+            config BSP_RTC_USING_LSI
+                bool "Enable RTC USING LSI"
+                default n
+            config BSP_RTC_USING_LSE
+                bool "Enable RTC USING LSE"
+                default n
+        endif
+
     source "$(BSP_DIR)/../libraries/HAL_Drivers/drivers/Kconfig"
 
 endmenu
