update: Project Kconfig.

--- a/bsp/stm32/stm32u545-st-nucleo/.config
+++ b/bsp/stm32/stm32u545-st-nucleo/.config
@@ -1,5 +1,7 @@
 CONFIG_SOC_STM32U545RE=y
 CONFIG_BOARD_STM32U545_NUCLEO=y
+# CONFIG_SOC_STM32U535RE is not set
+# CONFIG_BOARD_STM32U535_NUCLEO is not set
 
 #
 # RT-Thread Kernel
@@ -1218,9 +1220,13 @@ CONFIG_PKG_LWGPS_VER="latest"
 # end of Arduino libraries
 # end of RT-Thread online packages
 
+#
+# STM32 Version Config
+#
 CONFIG_SOC_FAMILY_STM32=y
 CONFIG_SOC_SERIES_STM32U5=y
 CONFIG_BOARD_SERIES_STM32_NUCLEO_64=y
+# end of STM32 Version Config
 
 #
 # Hardware Drivers Config
