--- a/bsp/stm32/stm32u545-st-nucleo/Kconfig
+++ b/bsp/stm32/stm32u545-st-nucleo/Kconfig
@@ -7,16 +7,30 @@ RTT_DIR := ../../..
 PKGS_DIR := packages
 
 config SOC_STM32U545RE
-    bool
-    select SOC_SERIES_STM32U5
-    select RT_USING_COMPONENTS_INIT
-    select RT_USING_USER_MAIN
-    default y
+	bool "SOC_STM32U545RE"
+	select SOC_SERIES_STM32U5
+	select RT_USING_COMPONENTS_INIT
+	select RT_USING_USER_MAIN
+	default y
 
 config BOARD_STM32U545_NUCLEO
-    bool
-    select BOARD_SERIES_STM32_NUCLEO_64
-    default y
+	bool "BOARD_STM32U545_NUCLEO"
+	select SOC_STM32U545RE
+	select BOARD_SERIES_STM32_NUCLEO_64
+	default y
+
+config SOC_STM32U535RE
+	bool "SOC_STM32U535RE"
+	select SOC_SERIES_STM32U5
+	select RT_USING_COMPONENTS_INIT
+	select RT_USING_USER_MAIN
+	default n
+
+config BOARD_STM32U535_NUCLEO
+	bool "BOARD_STM32U535_NUCLEO"
+	select SOC_STM32U535RE
+	select BOARD_SERIES_STM32_NUCLEO_64
+	default n
 
 source "$(RTT_DIR)/Kconfig"
 osource "$PKGS_DIR/Kconfig"
