App 中增加了日志输出模块

--- a/bsp/stm32/encortec/.config
+++ b/bsp/stm32/encortec/.config
@@ -1213,3 +1213,23 @@ CONFIG_BSP_USING_ADC=y
 # Board extended module Drivers
 #
 # end of Hardware Drivers Config
+
+#
+# Encorteec Application Config
+#
+
+#
+# Logging configuration
+#
+CONFIG_APP_USING_LOG=y
+CONFIG_APP_LOG_PRINT_CHANNEL=y
+CONFIG_APP_LOG_PRINT_TO_UART=y
+CONFIG_APP_LOG_PRINT_TO_FILE=y
+CONFIG_APP_LOG_LEVEL=y
+CONFIG_APP_LOG_LEVEL_DBG=y
+CONFIG_APP_LOG_LEVEL_INF=y
+CONFIG_APP_LOG_LEVEL_WAR=y
+CONFIG_APP_LOG_LEVEL_ERR=y
+CONFIG_APP_LOG_USING_TS=y
+# end of Logging configuration
+# end of Encorteec Application Config
