--- a/bsp/stm32/encortec/.config
+++ b/bsp/stm32/encortec/.config
@@ -1231,5 +1231,6 @@ CONFIG_APP_LOG_LEVEL_INF=y
 CONFIG_APP_LOG_LEVEL_WAR=y
 CONFIG_APP_LOG_LEVEL_ERR=y
 CONFIG_APP_LOG_USING_TS=y
+CONFIG_APP_LOG_BUF_SIZE=512
 # end of Logging configuration
 # end of Encorteec Application Config
