--- a/bsp/stm32/stm32u545-st-nucleo/.config
+++ b/bsp/stm32/stm32u545-st-nucleo/.config
@@ -1,7 +1,7 @@
-CONFIG_SOC_STM32U545RE=y
-CONFIG_BOARD_STM32U545_NUCLEO=y
-# CONFIG_SOC_STM32U535RE is not set
-# CONFIG_BOARD_STM32U535_NUCLEO is not set
+# CONFIG_SOC_STM32U545RE is not set
+# CONFIG_BOARD_STM32U545_NUCLEO is not set
+CONFIG_SOC_STM32U535RE=y
+CONFIG_BOARD_STM32U535_NUCLEO=y
 
 #
 # RT-Thread Kernel
@@ -241,7 +241,10 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # end of Interprocess Communication (IPC)
 # end of POSIX (Portable Operating System Interface) layer
 
-# CONFIG_RT_USING_CPLUSPLUS is not set
+CONFIG_RT_USING_CPLUSPLUS=y
+# CONFIG_RT_USING_CPLUSPLUS11 is not set
+# CONFIG_RT_USING_CPP_WRAPPER is not set
+# CONFIG_RT_USING_CPP_EXCEPTIONS is not set
 # end of C/C++ and POSIX layer
 
 #
@@ -621,7 +624,12 @@ CONFIG_PKG_RT_VSNPRINTF_FULL_VER="latest"
 # CONFIG_PKG_USING_CAIRO is not set
 # CONFIG_PKG_USING_PIXMAN is not set
 # CONFIG_PKG_USING_PARTITION is not set
-# CONFIG_PKG_USING_PERF_COUNTER is not set
+CONFIG_PKG_USING_PERF_COUNTER=y
+CONFIG_PKG_PERF_COUNTER_PATH="/packages/system/perf_counter"
+# CONFIG_PKG_PERF_COUNTER_USING_THREAD_STATISTIC is not set
+CONFIG_PKG_USING_PERF_COUNTER_V2241=y
+# CONFIG_PKG_USING_PERF_COUNTER_LATEST_VERSION is not set
+CONFIG_PKG_PERF_COUNTER_VER="v2.2.4.1"
 # CONFIG_PKG_USING_FILEX is not set
 # CONFIG_PKG_USING_LEVELX is not set
 # CONFIG_PKG_USING_FLASHDB is not set
@@ -987,7 +995,22 @@ CONFIG_PKG_LWGPS_VER="latest"
 #
 # Arduino libraries
 #
-# CONFIG_PKG_USING_RTDUINO is not set
+CONFIG_PKG_USING_RTDUINO=y
+CONFIG_PKG_RTDUINO_PATH="/packages/arduino/RTduino"
+# CONFIG_RTDUINO_NO_SETUP_LOOP is not set
+CONFIG_RTDUINO_THREAD_SIZE=2048
+CONFIG_RTDUINO_THREAD_PRIO=30
+# CONFIG_RTDUINO_TINY_MODE is not set
+# CONFIG_RTDUINO_SUPPORT_FLOAT_STRING is not set
+CONFIG_RTDUINO_SUPPORT_HIGH_PRECISION_MICROS=y
+CONFIG_RTDUINO_USING_WIRE=y
+CONFIG_RTDUINO_WIRE_BUFFER_LENGTH=32
+CONFIG_RTDUINO_USING_SPI=y
+# CONFIG_RTDUINO_USING_SERVO is not set
+# CONFIG_RTDUINO_USING_USBSERIAL is not set
+# CONFIG_RTDUINO_USING_SHELL_CMD is not set
+CONFIG_PKG_USING_RTDUINO_LATEST_VERSION=y
+CONFIG_PKG_RTDUINO_VER="latest"
 
 #
 # Projects and Demos
@@ -1004,7 +1027,10 @@ CONFIG_PKG_LWGPS_VER="latest"
 # Sensors
 #
 # CONFIG_PKG_USING_ARDUINO_SENSOR_DEVICE_DRIVERS is not set
-# CONFIG_PKG_USING_ARDUINO_ADAFRUIT_SENSOR is not set
+CONFIG_PKG_USING_ARDUINO_ADAFRUIT_SENSOR=y
+CONFIG_PKG_ARDUINO_ADAFRUIT_SENSOR_PATH="/packages/arduino/sensors/Adafruit-Sensor"
+CONFIG_PKG_USING_ARDUINO_ADAFRUIT_SENSOR_LATEST_VERSION=y
+CONFIG_PKG_ARDUINO_ADAFRUIT_SENSOR_VER="latest"
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_SENSORLAB is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_ADXL375 is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_VL53L0X is not set
@@ -1204,7 +1230,10 @@ CONFIG_PKG_LWGPS_VER="latest"
 #
 # Signal IO
 #
-# CONFIG_PKG_USING_ARDUINO_ADAFRUIT_BUSIO is not set
+CONFIG_PKG_USING_ARDUINO_ADAFRUIT_BUSIO=y
+CONFIG_PKG_ARDUINO_ADAFRUIT_BUSIO_PATH="/packages/arduino/signalio/Adafruit-BusIO"
+CONFIG_PKG_USING_ARDUINO_ADAFRUIT_BUSIO_LATEST_VERSION=y
+CONFIG_PKG_ARDUINO_ADAFRUIT_BUSIO_VER="latest"
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_TCA8418 is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_MCP23017 is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_ADS1X15 is not set
@@ -1220,13 +1249,9 @@ CONFIG_PKG_LWGPS_VER="latest"
 # end of Arduino libraries
 # end of RT-Thread online packages
 
-#
-# STM32 Version Config
-#
 CONFIG_SOC_FAMILY_STM32=y
 CONFIG_SOC_SERIES_STM32U5=y
 CONFIG_BOARD_SERIES_STM32_NUCLEO_64=y
-# end of STM32 Version Config
 
 #
 # Hardware Drivers Config
@@ -1254,7 +1279,10 @@ CONFIG_BSP_USING_LPUART1=y
 CONFIG_BSP_USING_ADC=y
 CONFIG_BSP_USING_ADC1=y
 # CONFIG_BSP_USING_PWM is not set
-# CONFIG_BSP_USING_SPI is not set
+CONFIG_BSP_USING_SPI=y
+CONFIG_BSP_USING_SPI1=y
+# CONFIG_BSP_SPI1_TX_USING_DMA is not set
+# CONFIG_BSP_SPI1_RX_USING_DMA is not set
 CONFIG_BSP_USING_I2C=y
 CONFIG_BSP_USING_I2C1=y
 
