--- a/bsp/stm32/stm32u545-st-nucleo/.config
+++ b/bsp/stm32/stm32u545-st-nucleo/.config
@@ -253,7 +253,15 @@ CONFIG_RT_USING_CPLUSPLUS=y
 # CONFIG_RT_USING_SAL is not set
 # CONFIG_RT_USING_NETDEV is not set
 # CONFIG_RT_USING_LWIP is not set
-# CONFIG_RT_USING_AT is not set
+CONFIG_RT_USING_AT=y
+CONFIG_AT_DEBUG=y
+# CONFIG_AT_USING_SERVER is not set
+CONFIG_AT_USING_CLIENT=y
+CONFIG_AT_CLIENT_NUM_MAX=2
+# CONFIG_AT_USING_SOCKET is not set
+CONFIG_AT_USING_CLI=y
+CONFIG_AT_PRINT_RAW_CMD=y
+CONFIG_AT_SW_VERSION_NUM=0x10301
 # end of Network
 
 #
