增加 AS5F38G04SND-08LIN NAND Flash 驱动开发，测试暂未通过

--- a/bsp/stm32/encortec/.config
+++ b/bsp/stm32/encortec/.config
@@ -163,7 +163,8 @@ CONFIG_RT_USING_PWM=y
 # CONFIG_RT_USING_PULSE_ENCODER is not set
 # CONFIG_RT_USING_INPUT_CAPTURE is not set
 # CONFIG_RT_USING_MTD_NOR is not set
-# CONFIG_RT_USING_MTD_NAND is not set
+CONFIG_RT_USING_MTD_NAND=y
+CONFIG_RT_MTD_NAND_DEBUG=y
 # CONFIG_RT_USING_PM is not set
 # CONFIG_RT_USING_RTC is not set
 # CONFIG_RT_USING_SDIO is not set
