update: on chip flash.

--- a/bsp/stm32/stm32u545-st-nucleo/.config
+++ b/bsp/stm32/stm32u545-st-nucleo/.config
@@ -1,7 +1,7 @@
-CONFIG_SOC_STM32U545RE=y
-CONFIG_BOARD_STM32U545_NUCLEO=y
-# CONFIG_SOC_STM32U535RE is not set
-# CONFIG_BOARD_STM32U535_NUCLEO is not set
+# CONFIG_SOC_STM32U545RE is not set
+# CONFIG_BOARD_STM32U545_NUCLEO is not set
+CONFIG_SOC_STM32U535RE=y
+CONFIG_BOARD_STM32U535_NUCLEO=y
 
 #
 # RT-Thread Kernel
@@ -131,7 +131,11 @@ CONFIG_FINSH_USING_OPTION_COMPLETION=y
 # CONFIG_RT_USING_DFS is not set
 # end of DFS: device virtual file system
 
-# CONFIG_RT_USING_FAL is not set
+CONFIG_RT_USING_FAL=y
+CONFIG_FAL_DEBUG_CONFIG=y
+CONFIG_FAL_DEBUG=1
+CONFIG_FAL_PART_HAS_TABLE_CFG=y
+# CONFIG_FAL_USING_SFUD_PORT is not set
 
 #
 # Device Drivers
@@ -1302,6 +1306,7 @@ CONFIG_BSP_I2C1_SDA_PIN=19
 CONFIG_BSP_USING_ONCHIP_RTC=y
 # CONFIG_BSP_RTC_USING_LSI is not set
 CONFIG_BSP_RTC_USING_LSE=y
+CONFIG_BSP_USING_ON_CHIP_FLASH=y
 # CONFIG_BSP_USING_UDID is not set
 # end of On-chip Peripheral Drivers
 
