--- a/bsp/stm32/libraries/HAL_Drivers/drivers/Kconfig
+++ b/bsp/stm32/libraries/HAL_Drivers/drivers/Kconfig
@@ -55,6 +55,11 @@ config BSP_USING_CRYP
     depends on (SOC_SERIES_STM32MP1)
     default n
 
+config BSP_USING_ON_CHIP_FLASH
+    bool "Enable on-chip FLASH"
+    depends on (SOC_SERIES_STM32U5)
+    default n
+
 config BSP_USING_UDID
     bool "Enable UDID (Unique Device Identifier)"
     select RT_USING_HWCRYPTO
