--- a/bsp/stm32/libraries/HAL_Drivers/drivers/SConscript
+++ b/bsp/stm32/libraries/HAL_Drivers/drivers/SConscript
@@ -101,6 +101,9 @@ if GetDepend(['BSP_USING_ON_CHIP_FLASH', 'SOC_SERIES_STM32H7']):
 if GetDepend(['BSP_USING_ON_CHIP_FLASH', 'SOC_SERIES_STM32WB']):
     src += [os.path.join('drv_flash', 'drv_flash_wb.c')]
 
+if GetDepend(['BSP_USING_ON_CHIP_FLASH', 'SOC_SERIES_STM32U5']):
+    src += [os.path.join('drv_flash', 'drv_flash_u5.c')]
+
 if GetDepend('RT_USING_HWCRYPTO'):
     src += ['drv_crypto.c']
 
