--- a/bsp/stm32/libraries/STM32U5xx_HAL/SConscript
+++ b/bsp/stm32/libraries/STM32U5xx_HAL/SConscript
@@ -93,7 +93,7 @@ if GetDepend(['RT_USING_PM']):
 if GetDepend(['BSP_USING_ON_CHIP_FLASH']):
     src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_flash.c']
     src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_flash_ex.c']
-    src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_flash_ramfunc.c']
+    # src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_flash_ramfunc.c']
 
 if GetDepend(['BSP_USING_FMC']):
     src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_ll_fmc.c']
