--- a/bsp/stm32/stm32u545-st-nucleo/.config
+++ b/bsp/stm32/stm32u545-st-nucleo/.config
@@ -113,7 +113,7 @@ CONFIG_RT_USING_FINSH=y
 CONFIG_FINSH_USING_MSH=y
 CONFIG_FINSH_THREAD_NAME="tshell"
 CONFIG_FINSH_THREAD_PRIORITY=20
-CONFIG_FINSH_THREAD_STACK_SIZE=4096
+CONFIG_FINSH_THREAD_STACK_SIZE=8192
 CONFIG_FINSH_USING_HISTORY=y
 CONFIG_FINSH_HISTORY_LINES=5
 CONFIG_FINSH_USING_SYMTAB=y
@@ -194,7 +194,26 @@ CONFIG_RT_USING_SENSOR_V2=y
 CONFIG_RT_USING_SENSOR_CMD=y
 # CONFIG_RT_USING_TOUCH is not set
 # CONFIG_RT_USING_LCD is not set
-# CONFIG_RT_USING_HWCRYPTO is not set
+CONFIG_RT_USING_HWCRYPTO=y
+CONFIG_RT_HWCRYPTO_DEFAULT_NAME="hwcryto"
+CONFIG_RT_HWCRYPTO_IV_MAX_SIZE=16
+CONFIG_RT_HWCRYPTO_KEYBIT_MAX_SIZE=256
+# CONFIG_RT_HWCRYPTO_USING_GCM is not set
+# CONFIG_RT_HWCRYPTO_USING_AES is not set
+# CONFIG_RT_HWCRYPTO_USING_DES is not set
+# CONFIG_RT_HWCRYPTO_USING_3DES is not set
+# CONFIG_RT_HWCRYPTO_USING_RC4 is not set
+# CONFIG_RT_HWCRYPTO_USING_MD5 is not set
+# CONFIG_RT_HWCRYPTO_USING_SHA1 is not set
+# CONFIG_RT_HWCRYPTO_USING_SHA2 is not set
+# CONFIG_RT_HWCRYPTO_USING_RNG is not set
+CONFIG_RT_HWCRYPTO_USING_CRC=y
+CONFIG_RT_HWCRYPTO_USING_CRC_07=y
+# CONFIG_RT_HWCRYPTO_USING_CRC_8005 is not set
+# CONFIG_RT_HWCRYPTO_USING_CRC_1021 is not set
+# CONFIG_RT_HWCRYPTO_USING_CRC_3D65 is not set
+CONFIG_RT_HWCRYPTO_USING_CRC_04C11DB7=y
+# CONFIG_RT_HWCRYPTO_USING_BIGNUM is not set
 # CONFIG_RT_USING_WIFI is not set
 # CONFIG_RT_USING_VIRTIO is not set
 CONFIG_RT_USING_PIN=y
@@ -1306,6 +1325,10 @@ CONFIG_BSP_I2C1_SDA_PIN=19
 CONFIG_BSP_USING_ONCHIP_RTC=y
 # CONFIG_BSP_RTC_USING_LSI is not set
 CONFIG_BSP_RTC_USING_LSE=y
+CONFIG_BSP_USING_CRC=y
+# CONFIG_BSP_USING_RNG is not set
+# CONFIG_BSP_USING_HASH is not set
+# CONFIG_BSP_USING_CRYP is not set
 CONFIG_BSP_USING_ON_CHIP_FLASH=y
 # CONFIG_BSP_USING_UDID is not set
 # end of On-chip Peripheral Drivers
