--- a/bsp/stm32/libraries/HAL_Drivers/drivers/SConscript
+++ b/bsp/stm32/libraries/HAL_Drivers/drivers/SConscript
@@ -125,6 +125,9 @@ if GetDepend(['BSP_USING_PULSE_ENCODER']):
 if GetDepend(['BSP_USING_USBH']):
     src += ['drv_usbh.c']
 
+if GetDepend(['RT_USING_DFS']):
+    src += ['drv_dfs.c']
+
 path += [os.path.join(cwd, 'config')]
 
 if GetDepend('BSP_USING_ON_CHIP_FLASH'):
