--- a/bsp/stm32/stm32u545-st-nucleo/applications/libs/SConscript
+++ b/bsp/stm32/stm32u545-st-nucleo/applications/libs/SConscript
@@ -7,6 +7,9 @@ CPPPATH += [cwd + "/src"]
 CPPPATH += [cwd + "/inc"]
 src     = Glob('src/*.c')
 
+src     = Glob('file/file.c')
+CPPPATH += [cwd + "/file"]
+
 libs = DefineGroup('libs', src, depend = [''], CPPPATH = CPPPATH)
 
 Return('libs')
