update: add CONFIG_DFS_USING_POSIX.

--- a/bsp/stm32/stm32u545-st-nucleo/.config
+++ b/bsp/stm32/stm32u545-st-nucleo/.config
@@ -129,7 +129,7 @@ CONFIG_FINSH_USING_OPTION_COMPLETION=y
 # DFS: device virtual file system
 #
 CONFIG_RT_USING_DFS=y
-# CONFIG_DFS_USING_POSIX is not set
+CONFIG_DFS_USING_POSIX=y
 CONFIG_DFS_USING_WORKDIR=y
 # CONFIG_RT_USING_DFS_MNTTABLE is not set
 CONFIG_DFS_FD_MAX=16
