--- a/bsp/stm32/encortec/.config
+++ b/bsp/stm32/encortec/.config
@@ -60,7 +60,7 @@ CONFIG_RT_USING_MUTEX=y
 CONFIG_RT_USING_EVENT=y
 CONFIG_RT_USING_MAILBOX=y
 CONFIG_RT_USING_MESSAGEQUEUE=y
-# CONFIG_RT_USING_MESSAGEQUEUE_PRIORITY is not set
+CONFIG_RT_USING_MESSAGEQUEUE_PRIORITY=y
 CONFIG_RT_USING_SIGNALS=y
 # end of Inter-Thread communication
 
