--- a/bsp/stm32/encortec/application/SConstruct
+++ b/bsp/stm32/encortec/application/SConstruct
@@ -69,7 +69,6 @@ CPPPATH = [
     os.path.join(SDK_ROOT, "bootloader/board/CubeMX_Config/Inc"),
     os.path.join(SDK_ROOT, "application", "rt_api"),
     os.path.join(SDK_ROOT, "application", "logging"),
-    os.path.join(SDK_ROOT, "application", "memory"),
 ]
 
 # driver_list = os.listdir(os.path.join(SDK_ROOT, "application/board/driver"))
@@ -122,9 +121,9 @@ env.Append(CPPPATH=CPPPATH)
 # app_c_files = glob.glob(os.path.join("main", "*.c"))
 app_c_files = Split("""
 main/main.c
+main/syscalls.c
 rt_api/rt_api.c
 logging/logging.c
-memory/memory.c
 """
 )
 
