--- a/bsp/stm32/encortec/.config
+++ b/bsp/stm32/encortec/.config
@@ -1,7 +1,3 @@
-# CONFIG_SOC_STM32U545RE is not set
-# CONFIG_BOARD_STM32U545_NUCLEO is not set
-CONFIG_SOC_STM32U535RE=y
-CONFIG_BOARD_STM32U535_NUCLEO=y
 
 #
 # RT-Thread Kernel
@@ -1295,7 +1291,7 @@ CONFIG_BSP_USING_CRC=y
 # end of Hardware Drivers Config
 
 #
-# Encorteec Application Config
+# Encortec Application Config
 #
 
 #
@@ -1313,4 +1309,13 @@ CONFIG_APP_LOG_LEVEL_ERR=y
 CONFIG_APP_LOG_USING_TS=y
 CONFIG_APP_LOG_BUF_SIZE=512
 # end of Logging configuration
-# end of Encorteec Application Config
+
+#
+# STM32 Platform
+#
+# CONFIG_SOC_STM32U545RE is not set
+# CONFIG_BOARD_STM32U545_NUCLEO is not set
+CONFIG_SOC_STM32U535VE=y
+CONFIG_BOARD_STM32U535_NUCLEO=y
+# end of STM32 Platform
+# end of Encortec Application Config
