--- a/bsp/stm32/encortec/application/board/Kconfig
+++ b/bsp/stm32/encortec/application/board/Kconfig
@@ -1,4 +1,4 @@
-menu "Encorteec Application Config"
+menu "Encortec Application Config"
 
 menu "Logging configuration"
 
@@ -45,4 +45,35 @@ menu "Logging configuration"
         endif
 
 endmenu
+
+menu "STM32 Platform"
+
+    config SOC_STM32U545RE
+        bool "SOC_STM32U545RE"
+        select SOC_SERIES_STM32U5
+        select RT_USING_COMPONENTS_INIT
+        select RT_USING_USER_MAIN
+        default y
+
+    config BOARD_STM32U545_NUCLEO
+        bool "BOARD_STM32U545_NUCLEO"
+        select SOC_STM32U545RE
+        select BOARD_SERIES_STM32_NUCLEO_64
+        default y
+
+    config SOC_STM32U535VE
+        bool "SOC_STM32U535VE"
+        select SOC_SERIES_STM32U5
+        select RT_USING_COMPONENTS_INIT
+        select RT_USING_USER_MAIN
+        default n
+
+    config BOARD_STM32U535_NUCLEO
+        bool "BOARD_STM32U535_NUCLEO"
+        select SOC_STM32U535VE
+        select BOARD_SERIES_STM32_NUCLEO_64
+        default n
+
+endmenu
+
 endmenu
