--- a/bsp/stm32/stm32u535-st-nucleo/.config
+++ b/bsp/stm32/stm32u535-st-nucleo/.config
@@ -184,7 +184,8 @@ CONFIG_RT_USING_PWM=y
 # CONFIG_RT_USING_PULSE_ENCODER is not set
 # CONFIG_RT_USING_INPUT_CAPTURE is not set
 CONFIG_RT_USING_MTD_NOR=y
-# CONFIG_RT_USING_MTD_NAND is not set
+CONFIG_RT_USING_MTD_NAND=y
+# CONFIG_RT_MTD_NAND_DEBUG is not set
 CONFIG_RT_USING_PM=y
 CONFIG_PM_TICKLESS_THRESHOLD_TIME=2
 # CONFIG_PM_USING_CUSTOM_CONFIG is not set
