update: esp32 test code.

--- a/bsp/stm32/stm32u535-st-nucleo/applications/libs/SConscript
+++ b/bsp/stm32/stm32u535-st-nucleo/applications/libs/SConscript
@@ -6,6 +6,7 @@ CPPPATH = [cwd]
 CPPPATH += [cwd + "/src"]
 CPPPATH += [cwd + "/inc"]
 src     = Glob('src/*.c')
+# src     += Glob('.test/test_esp32.c')
 
 libs = DefineGroup('libs', src, depend = [''], CPPPATH = CPPPATH)
 
