update: disable memory protection

--- a/bsp/stm32/encortec/.config
+++ b/bsp/stm32/encortec/.config
@@ -278,12 +278,8 @@ CONFIG_AT_SW_VERSION_NUM=0x10301
 #
 # Memory protection
 #
-CONFIG_RT_USING_MEM_PROTECTION=y
-CONFIG_RT_USING_HW_STACK_GUARD=y
-CONFIG_USE_MEM_PROTECTION_EXAMPLES=y
-CONFIG_NUM_MEM_REGIONS=8
-CONFIG_NUM_EXCLUSIVE_REGIONS=2
-CONFIG_NUM_CONFIGURABLE_REGIONS=3
+# CONFIG_RT_USING_MEM_PROTECTION is not set
+# CONFIG_RT_USING_HW_STACK_GUARD is not set
 # end of Memory protection
 
 #
