--- a/bsp/stm32/stm32u535-st-nucleo/.config
+++ b/bsp/stm32/stm32u535-st-nucleo/.config
@@ -1,7 +1,3 @@
-# CONFIG_SOC_STM32U545RE is not set
-# CONFIG_BOARD_STM32U545_NUCLEO is not set
-CONFIG_SOC_STM32U535RE=y
-CONFIG_BOARD_STM32U535_NUCLEO=y
 
 #
 # RT-Thread Kernel
@@ -105,7 +101,7 @@ CONFIG_ARCH_ARM_CORTEX_M33=y
 #
 CONFIG_RT_USING_COMPONENTS_INIT=y
 CONFIG_RT_USING_USER_MAIN=y
-CONFIG_RT_MAIN_THREAD_STACK_SIZE=8192
+CONFIG_RT_MAIN_THREAD_STACK_SIZE=2048
 CONFIG_RT_MAIN_THREAD_PRIORITY=10
 # CONFIG_RT_USING_LEGACY is not set
 CONFIG_RT_USING_MSH=y
@@ -316,12 +312,8 @@ CONFIG_AT_SW_VERSION_NUM=0x10301
 #
 # Memory protection
 #
-CONFIG_RT_USING_MEM_PROTECTION=y
-CONFIG_RT_USING_HW_STACK_GUARD=y
-CONFIG_USE_MEM_PROTECTION_EXAMPLES=y
-CONFIG_NUM_MEM_REGIONS=8
-CONFIG_NUM_EXCLUSIVE_REGIONS=2
-CONFIG_NUM_CONFIGURABLE_REGIONS=3
+# CONFIG_RT_USING_MEM_PROTECTION is not set
+# CONFIG_RT_USING_HW_STACK_GUARD is not set
 # end of Memory protection
 
 #
@@ -702,28 +694,7 @@ CONFIG_PKG_PERF_COUNTER_VER="v2.2.4.1"
 # CONFIG_PKG_USING_SQLITE is not set
 # CONFIG_PKG_USING_RTI is not set
 # CONFIG_PKG_USING_DFS_YAFFS is not set
-CONFIG_PKG_USING_LITTLEFS=y
-CONFIG_PKG_LITTLEFS_PATH="/packages/system/littlefs"
-# CONFIG_PKG_USING_LITTLEFS_V090 is not set
-# CONFIG_PKG_USING_LITTLEFS_V170 is not set
-# CONFIG_PKG_USING_LITTLEFS_V172 is not set
-# CONFIG_PKG_USING_LITTLEFS_V201 is not set
-# CONFIG_PKG_USING_LITTLEFS_V205 is not set
-# CONFIG_PKG_USING_LITTLEFS_V214 is not set
-# CONFIG_PKG_USING_LITTLEFS_V220 is not set
-# CONFIG_PKG_USING_LITTLEFS_V221 is not set
-# CONFIG_PKG_USING_LITTLEFS_V230 is not set
-# CONFIG_PKG_USING_LITTLEFS_V250 is not set
-CONFIG_PKG_USING_LITTLEFS_LATEST_VERSION=y
-CONFIG_LFS_READ_SIZE=2048
-CONFIG_LFS_PROG_SIZE=2048
-CONFIG_LFS_BLOCK_SIZE=8192
-CONFIG_LFS_CACHE_SIZE=2048
-CONFIG_LFS_BLOCK_CYCLES=100
-# CONFIG_DFS_LFS_READONLY is not set
-CONFIG_LFS_THREADSAFE=y
-CONFIG_LFS_LOOKAHEAD_MAX=8
-CONFIG_PKG_LITTLEFS_VER="latest"
+# CONFIG_PKG_USING_LITTLEFS is not set
 # CONFIG_PKG_USING_DFS_JFFS2 is not set
 # CONFIG_PKG_USING_DFS_UFFS is not set
 # CONFIG_PKG_USING_LWEXT4 is not set
@@ -1347,10 +1318,10 @@ CONFIG_BOARD_SERIES_STM32_NUCLEO_64=y
 #
 # Onboard Peripheral Drivers
 #
-# CONFIG_BSP_USING_ARDUINO is not set
-# CONFIG_BSP_USING_KEY is not set
-# CONFIG_BSP_USING_MPU6XXX is not set
-# CONFIG_BSP_USING_SPI_FLASH is not set
+# CONFIG_SOC_STM32U545RE is not set
+CONFIG_SOC_STM32U535VE=y
+CONFIG_BOARD_STM32U535_NUCLEO=y
+CONFIG_BSP_USING_NAND_FLASH=y
 # end of Onboard Peripheral Drivers
 
 #
@@ -1381,7 +1352,7 @@ CONFIG_BSP_I2C1_SDA_PIN=19
 CONFIG_BSP_USING_ONCHIP_RTC=y
 # CONFIG_BSP_RTC_USING_LSI is not set
 CONFIG_BSP_RTC_USING_LSE=y
-CONFIG_BSP_USING_CRC=y
+# CONFIG_BSP_USING_CRC is not set
 # CONFIG_BSP_USING_RNG is not set
 # CONFIG_BSP_USING_HASH is not set
 # CONFIG_BSP_USING_CRYP is not set
