--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,13 +3,13 @@
         {
             "cwd": "${workspaceRoot}",
             "executable": "${workspaceFolder}/bsp/stm32/encortec/application/build/encortec-application.elf",
-            "name": "Debug with ST-Link",
+            "name": "Debug with J-Link",
             "request": "launch",
             "type": "cortex-debug",
-            "servertype": "stlink",
+            "servertype": "jlink",
             "interface": "swd",
-            "device": "STM32U545RE",
-            "svdFile": "${workspaceRoot}/.vscode/STM32U545.svd",
+            "device": "STM32U535VE",
+            "svdFile": "${workspaceRoot}/.vscode/STM32U535.svd",
             "liveWatch": {
                 "enabled": true,
                 "samplesPerSecond": 4
