update: test mtd code.

--- a/bsp/stm32/stm32u535-st-nucleo/applications/libs/SConscript
+++ b/bsp/stm32/stm32u535-st-nucleo/applications/libs/SConscript
@@ -7,6 +7,7 @@ CPPPATH += [cwd + "/src"]
 CPPPATH += [cwd + "/inc"]
 src     = Glob('src/*.c')
 # src     += Glob('.test/test_esp32.c')
+# src     += Glob('.test/test_nand_flash.c')
 
 libs = DefineGroup('libs', src, depend = [''], CPPPATH = CPPPATH)
 
