--- a/bsp/stm32/stm32u535-st-nucleo/.config
+++ b/bsp/stm32/stm32u535-st-nucleo/.config
@@ -693,7 +693,11 @@ CONFIG_PKG_PERF_COUNTER_VER="v2.2.4.1"
 # CONFIG_PKG_USING_FLASHDB is not set
 # CONFIG_PKG_USING_SQLITE is not set
 # CONFIG_PKG_USING_RTI is not set
-# CONFIG_PKG_USING_DFS_YAFFS is not set
+CONFIG_PKG_USING_DFS_YAFFS=y
+CONFIG_PKG_YAFFS_PATH="/packages/system/yaffs2"
+CONFIG_PKG_USING_YAFFS_LATEST_VERSION=y
+# CONFIG_PKG_USING_YAFFS_V100 is not set
+CONFIG_PKG_YAFFS_VER="latest"
 # CONFIG_PKG_USING_LITTLEFS is not set
 # CONFIG_PKG_USING_DFS_JFFS2 is not set
 # CONFIG_PKG_USING_DFS_UFFS is not set
