--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "configurations": [
         {
             "cwd": "${workspaceRoot}",
-            "executable": "${workspaceFolder}/bsp/stm32/encortec/application/build/encortec-application.elf",
+            "executable": "${workspaceFolder}/bsp/stm32/stm32u535-st-nucleo/rt-thread.map",
             "name": "Debug with J-Link",
             "request": "launch",
             "type": "cortex-debug",
