--- a/bsp/stm32/stm32u535-st-nucleo/.config
+++ b/bsp/stm32/stm32u535-st-nucleo/.config
@@ -54,9 +54,9 @@ CONFIG_RT_USING_OVERFLOW_CHECK=y
 CONFIG_RT_USING_SEMAPHORE=y
 CONFIG_RT_USING_MUTEX=y
 CONFIG_RT_USING_EVENT=y
-CONFIG_RT_USING_MAILBOX=y
+# CONFIG_RT_USING_MAILBOX is not set
 CONFIG_RT_USING_MESSAGEQUEUE=y
-CONFIG_RT_USING_MESSAGEQUEUE_PRIORITY=y
+# CONFIG_RT_USING_MESSAGEQUEUE_PRIORITY is not set
 CONFIG_RT_USING_SIGNALS=y
 # end of Inter-Thread communication
 
@@ -286,10 +286,7 @@ CONFIG_RT_USING_POSIX_TIMER=y
 # end of Interprocess Communication (IPC)
 # end of POSIX (Portable Operating System Interface) layer
 
-CONFIG_RT_USING_CPLUSPLUS=y
-# CONFIG_RT_USING_CPLUSPLUS11 is not set
-# CONFIG_RT_USING_CPP_WRAPPER is not set
-# CONFIG_RT_USING_CPP_EXCEPTIONS is not set
+# CONFIG_RT_USING_CPLUSPLUS is not set
 # end of C/C++ and POSIX layer
 
 #
@@ -629,7 +626,7 @@ CONFIG_PKG_VSNPRINTF_SUPPORT_EXPONENTIAL_SPECIFIERS=y
 CONFIG_PKG_VSNPRINTF_SUPPORT_WRITEBACK_SPECIFIER=y
 CONFIG_PKG_VSNPRINTF_SUPPORT_LONG_LONG=y
 CONFIG_PKG_VSNPRINTF_CHECK_FOR_NUL_IN_FORMAT_SPECIFIER=y
-# CONFIG_PKG_VSNPRINTF_SUPPORT_MSVC_STYLE_INTEGER_SPECIFIERS is not set
+CONFIG_PKG_VSNPRINTF_SUPPORT_MSVC_STYLE_INTEGER_SPECIFIERS=y
 CONFIG_PKG_VSNPRINTF_INTEGER_BUFFER_SIZE=32
 CONFIG_PKG_VSNPRINTF_DECIMAL_BUFFER_SIZE=32
 CONFIG_PKG_VSNPRINTF_DEFAULT_FLOAT_PRECISION=6
@@ -682,12 +679,7 @@ CONFIG_PKG_RT_VSNPRINTF_FULL_VER="latest"
 # CONFIG_PKG_USING_CAIRO is not set
 # CONFIG_PKG_USING_PIXMAN is not set
 # CONFIG_PKG_USING_PARTITION is not set
-CONFIG_PKG_USING_PERF_COUNTER=y
-CONFIG_PKG_PERF_COUNTER_PATH="/packages/system/perf_counter"
-# CONFIG_PKG_PERF_COUNTER_USING_THREAD_STATISTIC is not set
-CONFIG_PKG_USING_PERF_COUNTER_V2241=y
-# CONFIG_PKG_USING_PERF_COUNTER_LATEST_VERSION is not set
-CONFIG_PKG_PERF_COUNTER_VER="v2.2.4.1"
+# CONFIG_PKG_USING_PERF_COUNTER is not set
 # CONFIG_PKG_USING_FILEX is not set
 # CONFIG_PKG_USING_LEVELX is not set
 # CONFIG_PKG_USING_FLASHDB is not set
@@ -1025,23 +1017,7 @@ CONFIG_PKG_YAFFS_VER="latest"
 # CONFIG_PKG_USING_KI is not set
 # CONFIG_PKG_USING_ARMv7M_DWT is not set
 # CONFIG_PKG_USING_CRCLIB is not set
-CONFIG_PKG_USING_LWGPS=y
-# CONFIG_LWGPS_USING_SAMPLES is not set
-CONFIG_PKG_LWGPS_PATH="/packages/misc/lwgps"
-CONFIG_GPS_MODULE_BAUD_RATE=115200
-CONFIG_LWGPS_CFG_DOUBLE=0
-CONFIG_LWGPS_CFG_STATUS=0
-CONFIG_LWGPS_CFG_STATEMENT_GPGGA=1
-CONFIG_LWGPS_CFG_STATEMENT_GPGSA=1
-CONFIG_LWGPS_CFG_STATEMENT_GPRMC=1
-CONFIG_LWGPS_CFG_STATEMENT_GPGSV=1
-CONFIG_LWGPS_CFG_STATEMENT_GPGSV_SAT_DET=0
-CONFIG_LWGPS_CFG_STATEMENT_PUBX=0
-CONFIG_LWGPS_CFG_STATEMENT_PUBX_TIME=0
-# CONFIG_PKG_USING_LWGPS_V100 is not set
-# CONFIG_PKG_USING_LWGPS_V110 is not set
-CONFIG_PKG_USING_LWGPS_LATEST_VERSION=y
-CONFIG_PKG_LWGPS_VER="latest"
+# CONFIG_PKG_USING_LWGPS is not set
 # CONFIG_PKG_USING_STATE_MACHINE is not set
 # CONFIG_PKG_USING_DESIGN_PATTERN is not set
 # CONFIG_PKG_USING_CONTROLLER is not set
@@ -1057,22 +1033,7 @@ CONFIG_PKG_LWGPS_VER="latest"
 #
 # Arduino libraries
 #
-CONFIG_PKG_USING_RTDUINO=y
-CONFIG_PKG_RTDUINO_PATH="/packages/arduino/RTduino"
-# CONFIG_RTDUINO_NO_SETUP_LOOP is not set
-CONFIG_RTDUINO_THREAD_SIZE=2048
-CONFIG_RTDUINO_THREAD_PRIO=30
-# CONFIG_RTDUINO_TINY_MODE is not set
-# CONFIG_RTDUINO_SUPPORT_FLOAT_STRING is not set
-CONFIG_RTDUINO_SUPPORT_HIGH_PRECISION_MICROS=y
-CONFIG_RTDUINO_USING_WIRE=y
-CONFIG_RTDUINO_WIRE_BUFFER_LENGTH=32
-CONFIG_RTDUINO_USING_SPI=y
-# CONFIG_RTDUINO_USING_SERVO is not set
-# CONFIG_RTDUINO_USING_USBSERIAL is not set
-# CONFIG_RTDUINO_USING_SHELL_CMD is not set
-CONFIG_PKG_USING_RTDUINO_LATEST_VERSION=y
-CONFIG_PKG_RTDUINO_VER="latest"
+# CONFIG_PKG_USING_RTDUINO is not set
 
 #
 # Projects and Demos
@@ -1089,10 +1050,7 @@ CONFIG_PKG_RTDUINO_VER="latest"
 # Sensors
 #
 # CONFIG_PKG_USING_ARDUINO_SENSOR_DEVICE_DRIVERS is not set
-CONFIG_PKG_USING_ARDUINO_ADAFRUIT_SENSOR=y
-CONFIG_PKG_ARDUINO_ADAFRUIT_SENSOR_PATH="/packages/arduino/sensors/Adafruit-Sensor"
-CONFIG_PKG_USING_ARDUINO_ADAFRUIT_SENSOR_LATEST_VERSION=y
-CONFIG_PKG_ARDUINO_ADAFRUIT_SENSOR_VER="latest"
+# CONFIG_PKG_USING_ARDUINO_ADAFRUIT_SENSOR is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_SENSORLAB is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_ADXL375 is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_VL53L0X is not set
@@ -1292,10 +1250,7 @@ CONFIG_PKG_ARDUINO_ADAFRUIT_SENSOR_VER="latest"
 #
 # Signal IO
 #
-CONFIG_PKG_USING_ARDUINO_ADAFRUIT_BUSIO=y
-CONFIG_PKG_ARDUINO_ADAFRUIT_BUSIO_PATH="/packages/arduino/signalio/Adafruit-BusIO"
-CONFIG_PKG_USING_ARDUINO_ADAFRUIT_BUSIO_LATEST_VERSION=y
-CONFIG_PKG_ARDUINO_ADAFRUIT_BUSIO_VER="latest"
+# CONFIG_PKG_USING_ARDUINO_ADAFRUIT_BUSIO is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_TCA8418 is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_MCP23017 is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_ADS1X15 is not set
@@ -1356,7 +1311,7 @@ CONFIG_BSP_I2C1_SDA_PIN=19
 CONFIG_BSP_USING_ONCHIP_RTC=y
 # CONFIG_BSP_RTC_USING_LSI is not set
 CONFIG_BSP_RTC_USING_LSE=y
-# CONFIG_BSP_USING_CRC is not set
+CONFIG_BSP_USING_CRC=y
 # CONFIG_BSP_USING_RNG is not set
 # CONFIG_BSP_USING_HASH is not set
 # CONFIG_BSP_USING_CRYP is not set
