--- a/bsp/stm32/stm32u535-st-nucleo/applications/libs/SConscript
+++ b/bsp/stm32/stm32u535-st-nucleo/applications/libs/SConscript
@@ -8,6 +8,7 @@ CPPPATH += [cwd + "/inc"]
 src     = Glob('src/*.c')
 # src     += Glob('.test/test_esp32.c')
 # src     += Glob('.test/test_nand_flash.c')
+src     += Glob('.test/file.c')
 
 libs = DefineGroup('libs', src, depend = [''], CPPPATH = CPPPATH)
 
